# TaskmangementAPI

./: README.md  prompt.md
.claude/: settings.local.json
.claude/skills/cicd-pipeline-gen/: SKILL.md
.claude/skills/cicd-pipeline-gen/references/: pipeline-templates.md
.claude/skills/docker-compose-gen/: SKILL.md
.claude/skills/docker-compose-gen/references/: compose-templates.md
.claude/skills/fastapi/: SKILL.md
.claude/skills/fastapi/assets/hello-world/: README.md  main.py
.claude/skills/fastapi/assets/production-template/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
.claude/skills/fastapi/assets/production-template/app/: config.py  (+1 more)
.claude/skills/fastapi/references/: agent-integration.md  background-tasks.md  crud-operations.md  dependencies.md  deployment.md  environment-variables.md  error-handling.md  jwt-authentication.md  lifespan-events.md  middleware-cors.md  path-operations.md  security.md  sqlmodel-database.md  streaming-sse.md  testing.md  user-management.md
.claude/skills/fastapi/scripts/: create_project.py  start_dev.sh
.claude/skills/git-commit-msg/: SKILL.md
.claude/skills/git-commit-msg/references/: commit-examples.md
.claude/skills/kwl-lesson-planner/: SKILL.md
.claude/skills/kwl-lesson-planner/assets/: example-lesson-plan.md
.claude/skills/kwl-lesson-planner/references/: sindh-board-alignment.md
task-management-api/: .env.example  .gitignore  README.md  config.py  database.py  main.py  models.py  pyproject.toml
task-management-api/tests/: __init__.py  conftest.py  test_tasks.py
(+4 files in other folders)
